Updated the simulator to use latest package dependecies.